--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "GachaKit Api Server Framework",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,10 @@
   },
   "homepage": "https://github.com/gachakit/GachaAPI#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mathjs": "^6.1.0",
     "mongodb": "^3.3.0"
   },
   "devDependencies": {
